# Rust-OpenGL

./: Cargo.toml  README.md  build.rs  main.rs  render_gl.rs  triangle.frag  triangle.vert
assets/shaders/: triangle.vert
lib/gl/: Cargo.toml
src/: main.rs  render_gl.rs  resources.rs  triangle.frag  triangle.rs  triangle.vert
src/render_gl/: buffer.rs  color_buffer.rs  mod.rs  shader.rs  viewport.rs
